typed.js working and pretty buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,10 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+#profile-pic{
+  position: relative;
+  top: -76px;
+  left: 813px;
+}
