--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,18 @@
 // Define variables for your color scheme
 
-// For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+// Bootstrap
+$bootstrap-red: #FD1015;
+$bootstrap-blue: #0D6EFD;
+$bootstrap-yellow: #FFC65A;
+$bootstrap-orange: #E67E22;
+$bootstrap-green: #1EDD88;
+$bootstrap-gray: #0E0000;
+$bootstrap-light-gray: #F4F4F4;
+
+
+// Custom
+$primary-violet: #6F14F5;
+$pastel-pink: #EF798A;
+$secondary-blue: #628BF7;
+$foamy: #ADFCDA;
+$light-foamy: #D9FEDF;
