--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -14,3 +14,6 @@ $headers-font: "Nunito", "Helvetica", "sans-serif";
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+
+// font-family: 'M PLUS 1 Code', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@200;400;600&display=swap');
