--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,8 @@
 @import "pages/index";
 
 
-#profile-pic{
-  position: relative;
-  top: -76px;
-  left: 813px;
+body {
+  background-color: #62717D;
+  background-color: #FCFCFC;
+  color: black;
 }
