--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,17 @@
-<br>
-<br>
-<br>
-<div class="typing-zone" data-controller="typed">
-  <div id="string-element">
-    <p>Bonjour 👋🏼</p>
-    <p>Bonjour, je m'appelle <span class="highlight-code">&ltMarc&gt</span></p>
-    <p>Je suis <span class="highlight-code">&ltdéveloppeur freelance&gt</span></p>
-    <p>Contactez-moi pour votre projet de site web !</p>
+<div class="my-banner">
+  <div class="my-banner-top-content">
+    <div class="left-zone">
+      <div class="typing-zone" data-controller="typed">
+        <div id="string-element">
+          <p>Bonjour 👋🏼</p>
+          <p>Bonjour, je m'appelle <span class="highlight-code">&ltMarc&gt</span></p>
+          <p>Je suis <span class="highlight-code">&ltdéveloppeur freelance&gt</span></p>
+          <p>Contactez-moi pour votre projet de site web !</p>
+        </div>
+        <span id="typing-text-area"></span>
+      </div>
+      <div class="btn btn-primary" id="home-call-to-a">Me contacter</div>
+    </div>
+    <%= image_tag 'profile-pic-(18).jpg', alt: "text", id:"profile-pic" %>
   </div>
-  <span id="typing-text-area"></span>
 </div>
-<div class="btn btn-primary" id="home-call-to-a">This should be a button</div>
-
-<%= image_tag 'profile-pic.png', alt: "text", id:"profile-pic" %>
