--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
 
 body {
   background-color: #62717D;
-  background-color: #FCFCFC;
+  background-color: $off-white;
   color: black;
   overflow-x: hidden;
 }
