--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "buttons";
 @import "banner";
 @import "form_legend_clear";
+@import "misc";
 @import "navbar";
 @import "texts_and_titles";
 @import "sections";
