--- a/app/assets/stylesheets/components/_texts_and_titles.scss
+++ b/app/assets/stylesheets/components/_texts_and_titles.scss
@@ -18,3 +18,13 @@
   border-radius: 1%;
   color: #6F14F5;
 }
+
+.h2-break{
+  margin: 1em auto 0 auto;
+  padding-top: 2em;
+  padding-bottom: 1em;
+  width: 100%;
+  border-top: 1px solid $primary-violet ;
+  text-align: center;
+  text-shadow: 8px 4px 5px #d9fedf;
+}
