--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,3 +16,5 @@ $pastel-pink: #EF798A;
 $secondary-blue: #628BF7;
 $foamy: #ADFCDA;
 $light-foamy: #D9FEDF;
+$bg-gray: #D8D8D8;
+$off-white: #FCFCFCFC;
