--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,11 +24,12 @@
 
 
 <div class="container">
-
   <div id="a-propos"data-controller="aos" data-aos="fade-up-left" class="one-image-section">
     <h2 class="highlight-code">&lt À propos de moi &gt</h2>
     <div class="one-image-section-content">
-      <%= image_tag 'profile-pic-(18).jpg', alt: "text", class:"section-image" %>
+      <div class='image-area'>
+        <%= image_tag 'profile-pic-(18).jpg', alt: "text", class:"section-image" %>
+      </div>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
         Ici il y aura un texte super cool <br><br>
@@ -47,8 +48,43 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
         Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
       </p>
+      <div class='image-area'>
+        <%= image_tag 'profile-pic-(18).jpg', alt: "text", class:"section-image" %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="bg-gray pb-5" data-controller="aos" data-aos="fade-up-left">
+  <h2 class="color-violet h2-break">&lt Mes projets &gt</h2>
+  <div class="one-image-section w-95 bg-white">
+    <h2 class="highlight-code">&lt Valentin(e).fr &gt Opticiens Lunettiers</h2>
+    <div class="one-image-section-content">
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
+        Ici il y aura un texte super cool <br><br>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
+        Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
+      </p>
+      <div class='image-area'>
+        <%= image_tag 'Valentine-logo.png', alt: "text", class:"w-50" %>
+        <%= image_tag 'profile-pic-(18).jpg', alt: "text", class:"section-image" %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div data-controller="aos" data-aos="fade-up-right" class="one-image-section bg-gray mt-0">
+  <h2 class="highlight-code">&lt Eligia.fr &gt simplification des démarches du deuil </h2>
+  <div class="one-image-section-content">
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
+      Ici il y aura un texte super cool <br><br>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
+      Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
+    </p>
+    <div class='image-area'>
       <%= image_tag 'profile-pic-(18).jpg', alt: "text", class:"section-image" %>
     </div>
   </div>
-
 </div>
