AI-generated images

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,7 +31,7 @@
     <h2 class="highlight-code">&lt À propos de moi &gt</h2>
     <div class="one-image-section-content">
       <div class='image-area'>
-        <%= image_tag 'profile-pic-(18).jpg', alt: "text", class:"section-image" %>
+        <%= image_tag '110.png', alt: "text", class:"section-image" %>
       </div>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
@@ -52,7 +52,7 @@
         Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
       </p>
       <div class='image-area'>
-        <%= image_tag 'profile-pic-(18).jpg', alt: "text", class:"section-image" %>
+        <%= image_tag '28.png', alt: "text", class:"section-image" %>
       </div>
     </div>
   </div>
