--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,28 +30,32 @@
   <div id="a-propos"data-controller="aos" data-aos="fade-up-left" class="one-image-section">
     <h2 class="highlight-code">&lt À propos de moi &gt</h2>
     <div class="one-image-section-content">
-      <div class='image-area'>
-        <%= image_tag '110.png', alt: "text", class:"section-image" %>
+      <div class='section-image-area'>
+        <%= image_tag '107.png', alt: "text", class:"section-image" %>
       </div>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-        Ici il y aura un texte super cool <br><br>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-        Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
-      </p>
+      <div class="section-text-area">
+        <p class="section-text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
+          Ici il y aura un texte super cool <br><br>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
+          Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
+        </p>
       </div>
+    </div>
   </div>
 
   <div data-controller="aos" data-aos="fade-up-right" class="one-image-section">
     <h2 class="highlight-code">&lt Ma formation &gt</h2>
     <div class="one-image-section-content">
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-        Ici il y aura un texte super cool <br><br>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-        Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
-      </p>
-      <div class='image-area'>
+      <div class="section-text-area">
+        <p class="section-text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
+          Ici il y aura un texte super cool <br><br>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
+          Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
+        </p>
+      </div>
+      <div class='section-image-area'>
         <%= image_tag '28.png', alt: "text", class:"section-image" %>
       </div>
     </div>
@@ -60,17 +64,18 @@
 
 <div class="bg-gray pb-5" data-controller="aos" data-aos="fade-up-left">
   <h2 id="projects"class="color-violet h2-break">&lt Mes projets &gt</h2>
-  <div class="one-image-section w-95 bg-white project-section">
+  <div class="project-section bg-white">
     <h2 class="highlight-code">&lt Valentin(e).fr &gt Opticiens Lunettiers</h2>
-    <div class="one-image-section-content">
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-        Ici il y aura un texte super cool <br><br>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-        Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
-      </p>
-      <div class='image-area'>
-        <%= image_tag 'Valentine-logo.png', alt: "text", class:"w-50" %>
+    <div class="project-content">
+      <div class="project-text-area">
+        <p class="project-text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
+          Ici il y aura un texte super cool <br><br>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
+        </p>
+      </div>
+      <div class='project-image-area'>
+        <%= image_tag 'Valentine-logo.png', alt: "text", class:"project-logo" %>
         <%= render 'carousel', carousel_id: 'carousel-1', image_1: 'valentine-1.png', image_2: 'valentine-2.png', image_3: 'valentine-3.png' %>
       </div>
     </div>
@@ -78,38 +83,38 @@
 </div>
 
 <div class="bg-gray pb-5" data-controller="aos" data-aos="fade-up-right">
-  <div class="one-image-section w-95 bg-white roject-section mt-0">
+  <div class=" w-95 bg-white project-section mt-0">
     <h2 class="highlight-code">&lt eligia.fr &gt simplification des démarches du deuil</h2>
-    <div class="one-image-section-content">
-      <div class='image-area'>
-        <%= image_tag 'eligia-sans-fond-vecto.svg', alt: "text", class:"w-50" %>
+    <div class="project-content">
+      <div class='project-image-area'>
+        <%= image_tag 'eligia-sans-fond-vecto.svg', alt: "text", class:"project-logo" %>
         <%= render 'carousel', carousel_id: 'carousel-2', image_1: 'eligia-1.png', image_2: 'eligia-2.png', image_3: 'eligia-3.png' %>
       </div>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-        Ici il y aura un texte super cool <br><br>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-        Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
-      </p>
+      <div class="project-text-area">
+        <p class="project-text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
+          Ici il y aura un texte super cool <br><br>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
+          Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
+        </p>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="bg-gray pb-5" data-controller="aos" data-aos="fade-up-left">
-  <div class="one-image-section w-95 bg-white project-section mt-0">
+  <div class="w-95 bg-white project-section mt-0">
     <h2 class="highlight-code">&lt Populum &gt Démocratie participative</h2>
-    <div class="one-image-section-content">
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-        Ici il y aura un texte super cool <br><br>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-        Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
-      </p>
-      <div class='image-area'>
-        <div class="w-50">
-          <%# <%= image_tag 'Populum.png', alt: "text", class:"w-50" %>
-          <%= render 'carousel', carousel_id: 'carousel-3', image_1: 'populum-1.png', image_2: 'populum-2.png', image_3: 'populum-3.png' %>
-        </div>
+    <div class="project-content">
+      <div class="project-text-area">
+        <p class="project-text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
+          Ici il y aura un texte super cool <br><br>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
+      </div>
+      <div class='project-image-area'>
+        <%= image_tag 'Populum.png', alt: "text", class:"project-logo" %>
+        <%= render 'carousel', carousel_id: 'carousel-3', image_1: 'populum-1.png', image_2: 'populum-2.png', image_3: 'populum-3.png', mobile: true %>
       </div>
     </div>
   </div>
