--- a/app/assets/stylesheets/components/_sections.scss
+++ b/app/assets/stylesheets/components/_sections.scss
@@ -1,24 +1,24 @@
 .one-image-section{
   margin-top: 3em;
-  padding: 3em;
 
   h2 {
     margin-bottom: 1em;
   }
+
   .one-image-section-content{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 3em;
+    box-sizing: border-box;
   }
 
-  p {
+  .section-text-area{
     width: 50%;
-    height: fit-content;
-    align-items: end;
-    margin-bottom: 0;
   }
 
-  .image-area{
+  .section-image-area{
     width: 45%;
     display: flex;
     flex-direction: column;
@@ -26,7 +26,7 @@
     align-items: center;
   }
 
-  img{
+  .section-image{
     width: 100%;
     object-fit: contain;
   }
@@ -34,5 +34,88 @@
 
 
 .project-section{
+  margin: 0 auto;
+  margin-top: 3em;
   height: 95vh;
+  width: 95%;
+  padding-top: 3em;
+
+  h2 {
+    margin-bottom: 1em;
+  }
+
+  .project-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 90%;
+    padding: 0 3em 3em 3em;
+    box-sizing: border-box;
+  }
+
+  .project-text-area {
+    width: 45%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .project-image-area{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .project-logo{
+    height: 20%;
+    object-fit: contain;
+  }
+}
+
+.project-carousel.landscape{
+  width: 90%;
+  height: fit-content;
+
+  .carousel-inner{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .carousel-item{
+    text-align: center;
+  }
+
+  .carousel-image{
+    width: 90%;
+    object-fit: contain;
+    margin: 0 auto;
+  }
+}
+
+.project-carousel.portrait{
+  height: 80%;
+  width: 90%;
+
+  .carousel-inner{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .carousel-item{
+    height: 90%;
+    text-align: center;
+  }
+
+  .carousel-image{
+    height: 100%;
+    object-fit: contain;
+    margin: 0 auto;
+  }
 }
